replaced temperature with light

--- a/2/ESP8266_Sensor_Readings_WebSocket/data/index.html
+++ b/2/ESP8266_Sensor_Readings_WebSocket/data/index.html
@@ -13,8 +13,8 @@
         <div class="content">
             <div class="card-grid">
                 <div class="card">
-                    <p class="card-title"><i class="fas fa-thermometer-threequarters" style="color:#059e8a;"></i> Temperature</p>
-                    <p class="reading"><span id="temperature"></span> &deg;C</p>
+                    <p class="card-title"> Light</p>
+                    <p class="reading"><span id="light"></span> </p>
                 </div>
             </div>
         </div>
