--- a/2/ESP8266_Sensor_Readings_WebSocket/data/index.html
+++ b/2/ESP8266_Sensor_Readings_WebSocket/data/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ESP IOT DASHBOARD</title>
+        <title>MultiMedia HW1</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.png">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="topnav">
-            <h1>SENSOR READINGS (WEBSOCKET)</h1>
+            <h1>MultiMedia HW1</h1>
         </div>
         <div class="content">
             <div class="card-grid">
