--- a/2/ESP8266_Sensor_Readings_WebSocket/data/index.html
+++ b/2/ESP8266_Sensor_Readings_WebSocket/data/index.html
@@ -20,8 +20,7 @@
         </div>
 		<div class="content">
 			<div class="card">
-			  <h2>Output - GPIO 2</h2>
-			  <p class="state">state: <span id="state">%STATE%</span></p>
+			  <h2>LED</h2>
 			  <p><button id="button" class="button">Toggle</button></p>
 			</div>
 		</div>
