Added some comments

--- a/2/ESP8266_LED_WebSocket/data/index.html
+++ b/2/ESP8266_LED_WebSocket/data/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="topnav">
-            <h1>MultiMedia HW1</h1>
+            <h1>Danial Fath pour - Sepehr Ahmadian </h1>
         </div>
         <div class="content">
             <div class="card-grid">
